Use code tag for inline code

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -111,8 +111,8 @@
 							<div class="project-title"></div>
 							<br>
 							<ul>
-								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
-								<li>You can also have DietPi boot directly to the desktop by using <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Desktop</b>.</li>
+								<li>Desktop can be run by typing <code>startx</code></li>
+								<li>You can also have DietPi boot directly to the desktop by using <code>dietpi-autostart</code> and selecting <code>Desktop</code>.</li>
 							</ul>
 						</div>
 					</div>
@@ -137,8 +137,8 @@
 							<div class="project-title"></div>
 							<br>
 							<ul>
-								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
-								<li>You can also have DietPi boot directly to the desktop by using <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Desktop</b>.</li>
+								<li>Desktop can be run by typing <code>startx</code></li>
+								<li>You can also have DietPi boot directly to the desktop by using <code>dietpi-autostart</code> and selecting <code>Desktop</code>.</li>
 							</ul>
 						</div>
 					</div>
@@ -162,8 +162,8 @@
 							<div class="project-title"></div>
 							<br>
 							<ul>
-								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
-								<li>You can also have DietPi boot directly to the desktop by using <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Desktop</b>.</li>
+								<li>Desktop can be run by typing <code>startx</code></li>
+								<li>You can also have DietPi boot directly to the desktop by using <code>dietpi-autostart</code> and selecting <code>Desktop</code>.</li>
 							</ul>
 						</div>
 					</div>
@@ -187,8 +187,8 @@
 							<div class="project-title"></div>
 							<br>
 							<ul>
-								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
-								<li>You can also have DietPi boot directly to the desktop by using <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Desktop</b>.</li>
+								<li>Desktop can be run by typing <code>startx</code></li>
+								<li>You can also have DietPi boot directly to the desktop by using <code>dietpi-autostart</code> and selecting <code>Desktop</code>.</li>
 							</ul>
 						</div>
 					</div>
@@ -214,12 +214,12 @@
 								<li>RPi 2+ supports native OpenGL and will be configured during installation.</li>
 								<li>Odroid's support OpenGLES and will be configured during installation.</li>
 								<li>Other devices will most likely be limited to software rendering.</li>
-								<li>You can check the status of HW GPU acceleration by accessing the following URL in Chromium <b style="color:orange">chrome://gpu</b>.</li>
+								<li>You can check the status of HW GPU acceleration by accessing the following URL in Chromium <code>chrome://gpu</code>.</li>
 							</ul>
 							<p><b>Launch options?</b></p>
 							<ul>
 								<li>Chromium can be launched from any desktop environment.</li>
-								<li>You can also run Chromium in kiosk mode (no desktop required), by running <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Chromium</b>.</li>
+								<li>You can also run Chromium in kiosk mode (no desktop required), by running <code>dietpi-autostart</code> and selecting <code>Chromium</code>.</li>
 							</ul>
 						</div>
 					</div>
@@ -2388,8 +2388,8 @@ Oldschool: Think Napster, but for buying and selling stuff using your Bitcoins <
 							<div class="project-title"></div>
 							<br>
 							<ul>
-								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
-								<li>You can also have DietPi boot directly to the desktop by using <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Desktop</b>.</li>
+								<li>Desktop can be run by typing <code>startx</code></li>
+								<li>You can also have DietPi boot directly to the desktop by using <code>dietpi-autostart</code> and selecting <code>Desktop</code>.</li>
 							</ul>
 						</div>
 					</div>
