Make our CSS versioned
so that Cloudflare and browser caches are invalidated. And remove a non-fitting colour.

--- a/contribute.html
+++ b/contribute.html
@@ -33,7 +33,7 @@
 		<meta name="theme-color" content="#000000">
 		<!-- Load CSS styles -->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/style.min.css">
+		<link rel="stylesheet" type="text/css" href="css/style.min.css?v=1">
 		<!-- Include JavaScript -->
 		<script defer src="js/jquery.min.js"></script>
 		<script defer src="js/bootstrap.min.js"></script>
@@ -69,7 +69,7 @@
 				<div class="title">
 					<h2>Grow in 2021</h2>
 					<p>
-						We are asking you to help the DietPi project. DietPi is an open-source product and it is free to use. We are sustained by donations and <b style="color: #c5ff00;"> even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, micro SD cards etc.), web hosting and future development. 
+						We are asking you to help the DietPi project. DietPi is an open-source product and it is free to use. We are sustained by donations and <b>even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, micro SD cards etc.), web hosting and future development. 
 						<br><br>This allows us to continue working on DietPi, make it better with every new update.
 						<br><br><img src="images/contribute/coffee.jpg" alt="Coffee" width="200" height="189" loading="lazy">
 						<br><br>In 2020 we made 8 releases and brought 128 improvements and changes, and fixed 119 bugs. We provided new software titles, support new SBCs and brought many optimisations. There are over <a href="https://dietpi.com/survey/" target="_blank" rel="noopener">110000</a> systems running DietPi.
