Make our CSS versioned
so that browser and Cloudflare caches are invalidated and remove a non-fitting colour, replaced with a code tag.

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -33,7 +33,7 @@
 		<meta name="theme-color" content="#000000">
 		<!-- Load CSS styles -->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/style.min.css">
+		<link rel="stylesheet" type="text/css" href="css/style.min.css?v=1">
 		<!-- Include JavaScript -->
 		<script defer src="js/jquery.min.js"></script>
 		<script defer src="js/bootstrap.min.js"></script>
@@ -65,7 +65,7 @@
 				<div class="title">
 					<h1>DietPi-Software</h1>
 					<p>Easily install optional "ready to run" and optimized software for your device. As well as automating the Linux installation and configuration process for you, DietPi-Software also applies specific optimizations unique to your hardware model, ensuring you get the maximum performance from your device.</p>
-					<p><i>NB: Available software is dependent on the device and CPU architecture, some software titles may be unavailable. You can run the following command to list disabled items:</i> <i style="color: #c5ff00;">dietpi-software list | grep disabled</i></p>
+					<p><i>NB: Available software is dependent on the device and CPU architecture, some software titles may be unavailable. You can run the following command to list disabled items:</i> <code>dietpi-software list | grep disabled</code></p>
 				</div>
 				<nav class="nav nav-pills" id="softwareinfo" style="display:none">
 					<button class="nav-link filter" data-filter="all">[All]</button>
