Add forgotten style

--- a/stats.html
+++ b/stats.html
@@ -34,7 +34,7 @@
 		<!-- Load CSS styles -->
 		<style>
 			.project-info { overflow-x: auto; }
-			table { width: 100%; }
+			table { width: 100%; white-space: nowrap; }
 			th,td { border: 1px solid #9ccc00; padding: 5px; }
 		</style>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
