--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v7.2 has been released!</h2>
-					<h4>Update now and benefit from enhancements like:</h4>
-					<p>Reliable desktop autologin as non-root user, desktop and browser preference options, extended provider support for DietPi-VPN and DietPi-DDNS, and many further updates and bug fixes.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/" target="_blank" rel="noopener">Release notes</a>
+					<h2>DietPi v7.3 beta is out</h2>
+					<h4>Please help testing the upcoming release!</h4>
+					<p>Turn your DHCP leased IP statically on first boot, block ads network-wide via AdGuard Home, stream music on multiple rooms via Snapcast, run Kubernetes clusters via K3s and more.</p>
+					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/4498" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
