Remove obsolete table cells

--- a/stats.html
+++ b/stats.html
@@ -114,9 +114,9 @@
 									<tr><td>Temporary files in RAM</td><td>Yes</td><td>No</td></tr>
 									<tr><td>Logs in RAM</td><td>Yes</td><td>No</td></tr>
 									<tr><td>SSH pre-installed</td><td>Yes</td><td>Optional</td></tr>
-									<tr><td>Download size</td><td></td><td>174.950.885 bytes</td><td>463.405.209 bytes</td></tr>
-									<tr><td>Image size</td><td></td><td>1.071.456.256 bytes</td><td>1.866.465.280 bytes</td></tr>
-									<tr><td>Build date</td><td></td><td>2021-03-25</td><td>2021-01-11</td></tr>
+									<tr><td>Download size</td><td>174.950.885 bytes</td><td>463.405.209 bytes</td></tr>
+									<tr><td>Image size</td><td>1.071.456.256 bytes</td><td>1.866.465.280 bytes</td></tr>
+									<tr><td>Build date</td><td>2021-03-25</td><td>2021-01-11</td></tr>
 								</table>
 							</div>
 						</div>
@@ -138,9 +138,9 @@
 									<tr><td>Temporary files in RAM</td><td>Yes</td><td>No</td></tr>
 									<tr><td>Logs in RAM</td><td>Yes</td><td>No</td></tr>
 									<tr><td>SSH pre-installed</td><td>Yes</td><td>Optional</td></tr>
-									<tr><td>Download size</td><td></td><td>174.950.885 bytes</td><td>463.405.209 bytes</td></tr>
-									<tr><td>Image size</td><td></td><td>1.071.456.256 bytes</td><td>1.866.465.280 bytes</td></tr>
-									<tr><td>Build date</td><td></td><td>2021-03-25</td><td>2021-01-11</td></tr>
+									<tr><td>Download size</td><td>174.950.885 bytes</td><td>463.405.209 bytes</td></tr>
+									<tr><td>Image size</td><td>1.071.456.256 bytes</td><td>1.866.465.280 bytes</td></tr>
+									<tr><td>Build date</td><td>2021-03-25</td><td>2021-01-11</td></tr>
 								</table>
 							</div>
 						</div>
